minimal history example; wip for commands

--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -26,3 +26,9 @@
 .admonition .sd-container-fluid {
   margin-left: inherit !important;
 }
+.bigger {
+  font-size: 130%;
+}
+.smaller {
+  font-size: 60%;
+}
